@@ -1,0 +1,1 @@
+﻿foo := new System.IO.FileInfo("myfile.txt")
